feat: cancel seance booking
